// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SendCurrencyInputform > renders input in fiat correctly 1`] = `
<div
  class="flex flex-col items-stretch basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 opacity-[1]"
>
  <div
    class="flex flex-col basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 items-center justify-end bg-surface1 border-surface3 border-[1px] border-b-[0px] relative [border-top-left-radius:var(--c-btlr)] [border-top-right-radius:var(--c-btrr)]"
    style="--c-btlr: 16px; --c-btrr: 16px;"
  >
    <div
      class="flex flex-col basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 items-center w-[100%]"
    >
      <div
        class="[container-name:true] flex flex-col items-stretch basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 [container-type:normal] rounded-[12px] bg-transparent w-[100%] [cursor:text] [transition:transform_80ms_ease-in-out,_opacity_80ms_ease-in-out] active:opacity-[0.75] active:[transform:scale(0.98)] focus-visible:[transform:scaleX(0.98)_scaleY(0.98)] focus-visible:[outline-offset:1px] focus-visible:[outline-style:solid] focus-visible:[outline-width:1px] focus-visible:[outline-color:var(--neutral3)] group"
        role="button"
        tabindex="0"
      >
        <div
          class="flex flex-col items-stretch basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 px-[16px] pt-[16px] w-[100%]"
        >
          <span
            class="[display:inline] box-border m-0 [word-wrap:break-word] whitespace-pre-wrap [font-family:var(--stext-font-book)] text-[16px] [line-height:22px] [font-weight:485] [color:var(--stext-neutral1)]"
          >
            You’re sending
          </span>
        </div>
        <div
          class="flex flex-col basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 items-center px-[16px] pt-[60px] w-[100%]"
        >
          <div
            class="flex items-stretch basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 flex-row w-[max-content] max-w-[100%] relative"
          >
            <div
              class="flex flex-col items-stretch basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0"
            >
              <span
                class="[display:inline] box-border m-0 [word-wrap:break-word] whitespace-pre-wrap [font-family:var(--stext-font-book)] text-[length:var(--c-text)] [font-weight:485] [line-height:var(--c-lh)] [color:var(--stext-neutral1)] text-left [user-select:none]"
                style="--c-text: 70px; --c-lh: 60px; line-height: 84px; font-size: 70px;"
              >
                $
              </span>
            </div>
            <input
              autocomplete="off"
              autocorrect="off"
              data-testid="send-form-amount-input"
              data-uds-placeholder=""
              dir="auto"
              inputmode="decimal"
              maxlength="79"
              placeholder="0"
              spellcheck="false"
              style="box-sizing: border-box; margin: 0px; padding: 0px 0px 0px 0px; border-width: 0px; border-style: solid; appearance: none; resize: none; position: relative; outline-width: 0; flex-grow: 1; flex-shrink: 1; flex-basis: auto; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; text-align: left; background-color: transparent; color: rgb(19, 19, 19); width: 43px; min-width: 0; max-width: calc(100% - 43px); max-height: 84px; font-family: Basel, -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif; font-size: 70px; font-weight: 485; line-height: 84px; outline-style: none; pointer-events: auto; --uds-input-placeholder: rgba(19, 19, 19, 0.63);"
              value="1000"
              virtualkeyboardpolicy="auto"
            />
            <span
              class="[display:inline] box-border m-0 [word-wrap:break-word] whitespace-pre-wrap [font-family:var(--stext-font-book)] text-[length:var(--c-text)] [font-weight:485] [line-height:var(--c-lh)] [color:var(--stext-neutral1)] text-left absolute right-[0px] bottom-[0px] [pointer-events:none]"
              style="--c-text: 70px; --c-lh: 60px; visibility: hidden; line-height: 84px; font-size: 70px;"
            >
              1000
            </span>
          </div>
        </div>
      </div>
      <div
        class="flex flex-col basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 items-center gap-[16px] px-[16px] pt-[16px] pb-[60px] w-[100%]"
      >
        <div
          class="flex basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 flex-row items-center justify-center gap-[4px] [cursor:pointer] hover:opacity-[var(--ch-opacity)] active:opacity-[var(--ca-opacity)] [text-decoration:none]"
          style="--ch-opacity: 0.8; --ca-opacity: 0.6; transition: 100ms;"
        >
          <span
            class="[display:inline] box-border m-0 [word-wrap:break-word] whitespace-pre-wrap [font-family:var(--stext-font-book)] text-[16px] [line-height:22px] [font-weight:485] [color:var(--stext-neutral2)]"
          >
            100.00 DAI
          </span>
          <svg
            fill="none"
            stroke-width="8"
            style="width: 16px; height: 16px;"
            viewBox="0 0 24 24"
          >
            <path
              d="M21.7069 7.7071C21.5119 7.9021 21.2559 8.00007 20.9999 8.00007C20.7439 8.00007 20.4879 7.9021 20.2929 7.7071L17.9999 5.41413V17.0001C17.9999 17.5521 17.5529 18.0001 16.9999 18.0001C16.4469 18.0001 15.9999 17.5521 15.9999 17.0001V5.41413L13.7069 7.7071C13.3159 8.0981 12.6839 8.0981 12.2929 7.7071C11.9019 7.3161 11.9019 6.68403 12.2929 6.29304L16.2919 2.29401C16.3849 2.20101 16.4948 2.12797 16.6178 2.07697C16.8618 1.97597 17.138 1.97597 17.382 2.07697C17.505 2.12797 17.6149 2.20101 17.7079 2.29401L21.7069 6.29304C22.0979 6.68403 22.0979 7.3161 21.7069 7.7071ZM10.2929 16.293L7.99992 18.586V7.00007C7.99992 6.44807 7.55292 6.00007 6.99992 6.00007C6.44692 6.00007 5.99992 6.44807 5.99992 7.00007V18.586L3.70695 16.293C3.31595 15.902 2.68388 15.902 2.29288 16.293C1.90188 16.684 1.90188 17.3161 2.29288 17.7071L6.29191 21.7061C6.38491 21.7991 6.49483 21.8722 6.61784 21.9232C6.73984 21.9742 6.86992 22.0001 6.99992 22.0001C7.12992 22.0001 7.25999 21.9732 7.382 21.9232C7.505 21.8722 7.61492 21.7991 7.70792 21.7061L11.7069 17.7071C12.0979 17.3161 12.0979 16.684 11.7069 16.293C11.3159 15.902 10.6839 15.902 10.2929 16.293Z"
              fill="currentColor"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
  <div
    class="flex flex-col items-stretch basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 justify-center px-[16px] h-[var(--c-h)] bg-surface1 border-surface3 border-[1px] relative [border-bottom-left-radius:var(--c-bblr)] [border-bottom-right-radius:var(--c-bbrr)]"
    style="--c-h: 64px; --c-bblr: 16px; --c-bbrr: 16px;"
  >
    <div
      class="[container-name:true] flex items-stretch basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 [container-type:normal] rounded-[12px] [cursor:pointer] bg-transparent flex-row justify-between [transition:transform_80ms_ease-in-out,_opacity_80ms_ease-in-out] active:opacity-[0.75] active:[transform:scale(0.98)] focus-visible:[transform:scaleX(0.98)_scaleY(0.98)] focus-visible:[outline-offset:1px] focus-visible:[outline-style:solid] focus-visible:[outline-width:1px] focus-visible:[outline-color:var(--neutral3)] group"
      data-testid="send-form-select-token"
      role="button"
      tabindex="0"
    >
      <div
        class="flex basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 flex-row items-center gap-[12px]"
      >
        <div
          class="flex basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 flex-row items-center gap-[12px] w-[100%]"
        >
          <div
            class="flex flex-col basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 items-center top-[0px] left-[0px]"
          >
            <div
              class="flex flex-col items-stretch basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 relative"
            >
              <div
                class="flex flex-col basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 items-center justify-center w-[36px] h-[36px] relative [pointer-events:auto]"
                data-testid="token-logo"
              >
                <div
                  class="flex flex-col items-stretch basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 w-[var(--c-w)] h-[var(--c-h)] bg-[color:var(--c-bg)] rounded-[999999px] opacity-[0] absolute top-[var(--c-top)] left-[var(--c-left)] z-[var(--c-z)]"
                  style="--c-w: 96%; --c-h: 96%; --c-bg: #FFFFFF; --c-top: 2%; --c-left: 2%; --c-z: 0;"
                />
                <div
                  data-testid="img-token-image"
                  style="box-sizing: border-box; display: flex; flex-direction: column; flex-shrink: 0; min-width: 0;"
                >
                  <img
                    height="36"
                    src="https://raw.githubusercontent.com/Uniswap/assets/master/blockchains/ethereum/assets/0x6B175474E89094C44Da98b954EedeAC495271d0F/logo.png"
                    style="object-fit: cover; width: 36px; height: 36px; border-radius: 36px; z-index: 1;"
                    width="36"
                  />
                </div>
                <div
                  class="flex flex-col items-stretch basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 absolute right-[var(--c-right)] bottom-[var(--c-bottom)] z-[var(--c-z)]"
                  style="--c-right: -3px; --c-bottom: -2px; --c-z: 10;"
                >
                  <div
                    class="flex flex-col basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 items-center justify-center overflow-hidden z-[var(--c-z)]"
                    data-testid="network-logo-1"
                    style="--c-z: 10; width: 17px; height: 17px; border-radius: 5.1px; border-width: 1.5px;"
                  >
                    <div
                      class="css-view-175oi2r r-flexBasis-1mlwlqe r-overflow-1udh08x r-zIndex-417010"
                      style="object-fit: contain; width: 15px; height: 15px;"
                    >
                      <div
                        class="css-view-175oi2r r-backgroundColor-1niwhzg r-backgroundPosition-vvn4in r-backgroundRepeat-u6sd8q r-bottom-1p0dtai r-height-1pi2tsx r-left-1d2f490 r-position-u8s1d r-right-zchlnj r-top-ipm5af r-width-13qz1uu r-zIndex-1wyyakw r-backgroundSize-4gszlv"
                        style="background-image: url(ethereum-logo.png);"
                      />
                      <img
                        alt=""
                        class="css-accessibilityImage-9pa8cd"
                        draggable="false"
                        src="ethereum-logo.png"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="flex items-stretch basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 flex-row w-[100%]"
          >
            <div
              class="flex flex-col items-stretch basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0"
            >
              <span
                class="[display:inline] box-border m-0 [word-wrap:break-word] whitespace-pre-wrap [font-family:var(--stext-font-book)] text-[16px] [line-height:22px] [font-weight:485] [color:var(--stext-neutral1)]"
              >
                DAI
              </span>
              <div
                class="flex items-stretch basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 flex-row gap-[4px] w-[100%]"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="flex items-stretch basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 flex-row"
      >
        <div
          class="flex flex-col basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 items-center justify-center rounded-[999999px] static [transform:var(--c-tr)] transition-transform duration-150 ease-in-out"
          style="--c-tr: rotate(270deg);"
        >
          <svg
            fill="none"
            stroke-width="8"
            style="color: rgb(155, 155, 155); width: 24px; height: 24px;"
            viewBox="0 0 24 24"
          >
            <path
              clip-rule="evenodd"
              d="M15.7071 5.29289C16.0976 5.68342 16.0976 6.31658 15.7071 6.70711L10.4142 12L15.7071 17.2929C16.0976 17.6834 16.0976 18.3166 15.7071 18.7071C15.3166 19.0976 14.6834 19.0976 14.2929 18.7071L8.2929 12.7071C7.9024 12.3166 7.9024 11.6834 8.2929 11.2929L14.2929 5.29289C14.6834 4.90237 15.3166 4.90237 15.7071 5.29289Z"
              fill="currentColor"
              fill-rule="evenodd"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SendCurrencyInputform > renders input in token amount correctly 1`] = `
<div
  class="flex flex-col items-stretch basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 opacity-[1]"
>
  <div
    class="flex flex-col basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 items-center justify-end bg-surface1 border-surface3 border-[1px] border-b-[0px] relative [border-top-left-radius:var(--c-btlr)] [border-top-right-radius:var(--c-btrr)]"
    style="--c-btlr: 16px; --c-btrr: 16px;"
  >
    <div
      class="flex flex-col basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 items-center w-[100%]"
    >
      <div
        class="[container-name:true] flex flex-col items-stretch basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 [container-type:normal] rounded-[12px] bg-transparent w-[100%] [cursor:text] [transition:transform_80ms_ease-in-out,_opacity_80ms_ease-in-out] active:opacity-[0.75] active:[transform:scale(0.98)] focus-visible:[transform:scaleX(0.98)_scaleY(0.98)] focus-visible:[outline-offset:1px] focus-visible:[outline-style:solid] focus-visible:[outline-width:1px] focus-visible:[outline-color:var(--neutral3)] group"
        role="button"
        tabindex="0"
      >
        <div
          class="flex flex-col items-stretch basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 px-[16px] pt-[16px] w-[100%]"
        >
          <span
            class="[display:inline] box-border m-0 [word-wrap:break-word] whitespace-pre-wrap [font-family:var(--stext-font-book)] text-[16px] [line-height:22px] [font-weight:485] [color:var(--stext-neutral1)]"
          >
            You’re sending
          </span>
        </div>
        <div
          class="flex flex-col basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 items-center px-[16px] pt-[60px] w-[100%]"
        >
          <div
            class="flex items-stretch basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 flex-row w-[max-content] max-w-[100%] relative"
          >
            <input
              autocomplete="off"
              autocorrect="off"
              data-testid="send-form-amount-input"
              data-uds-placeholder=""
              dir="auto"
              inputmode="decimal"
              maxlength="79"
              placeholder="0"
              spellcheck="false"
              style="box-sizing: border-box; margin: 0px; padding: 0px 0px 0px 0px; border-width: 0px; border-style: solid; appearance: none; resize: none; position: relative; outline-width: 0; flex-grow: 1; flex-shrink: 1; flex-basis: auto; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; text-align: left; background-color: transparent; color: rgb(19, 19, 19); width: 43px; min-width: 0; max-width: 100%; max-height: 84px; font-family: Basel, -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif; font-size: 70px; font-weight: 485; line-height: 84px; outline-style: none; pointer-events: auto; --uds-input-placeholder: rgba(19, 19, 19, 0.63);"
              value="1"
              virtualkeyboardpolicy="auto"
            />
            <span
              class="[display:inline] box-border m-0 [word-wrap:break-word] whitespace-pre-wrap [font-family:var(--stext-font-book)] text-[length:var(--c-text)] [font-weight:485] [line-height:var(--c-lh)] [color:var(--stext-neutral1)] text-left absolute right-[0px] bottom-[0px] [pointer-events:none]"
              style="--c-text: 70px; --c-lh: 60px; visibility: hidden; line-height: 84px; font-size: 70px;"
            >
              1
            </span>
          </div>
        </div>
      </div>
      <div
        class="flex flex-col basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 items-center gap-[16px] px-[16px] pt-[16px] pb-[60px] w-[100%]"
      >
        <div
          class="flex basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 flex-row items-center justify-center gap-[4px] [cursor:pointer] hover:opacity-[var(--ch-opacity)] active:opacity-[var(--ca-opacity)] [text-decoration:none]"
          style="--ch-opacity: 0.8; --ca-opacity: 0.6; transition: 100ms;"
        >
          <span
            class="[display:inline] box-border m-0 [word-wrap:break-word] whitespace-pre-wrap [font-family:var(--stext-font-book)] text-[16px] [line-height:22px] [font-weight:485] [color:var(--stext-neutral2)]"
          >
            $100.00
          </span>
          <svg
            fill="none"
            stroke-width="8"
            style="width: 16px; height: 16px;"
            viewBox="0 0 24 24"
          >
            <path
              d="M21.7069 7.7071C21.5119 7.9021 21.2559 8.00007 20.9999 8.00007C20.7439 8.00007 20.4879 7.9021 20.2929 7.7071L17.9999 5.41413V17.0001C17.9999 17.5521 17.5529 18.0001 16.9999 18.0001C16.4469 18.0001 15.9999 17.5521 15.9999 17.0001V5.41413L13.7069 7.7071C13.3159 8.0981 12.6839 8.0981 12.2929 7.7071C11.9019 7.3161 11.9019 6.68403 12.2929 6.29304L16.2919 2.29401C16.3849 2.20101 16.4948 2.12797 16.6178 2.07697C16.8618 1.97597 17.138 1.97597 17.382 2.07697C17.505 2.12797 17.6149 2.20101 17.7079 2.29401L21.7069 6.29304C22.0979 6.68403 22.0979 7.3161 21.7069 7.7071ZM10.2929 16.293L7.99992 18.586V7.00007C7.99992 6.44807 7.55292 6.00007 6.99992 6.00007C6.44692 6.00007 5.99992 6.44807 5.99992 7.00007V18.586L3.70695 16.293C3.31595 15.902 2.68388 15.902 2.29288 16.293C1.90188 16.684 1.90188 17.3161 2.29288 17.7071L6.29191 21.7061C6.38491 21.7991 6.49483 21.8722 6.61784 21.9232C6.73984 21.9742 6.86992 22.0001 6.99992 22.0001C7.12992 22.0001 7.25999 21.9732 7.382 21.9232C7.505 21.8722 7.61492 21.7991 7.70792 21.7061L11.7069 17.7071C12.0979 17.3161 12.0979 16.684 11.7069 16.293C11.3159 15.902 10.6839 15.902 10.2929 16.293Z"
              fill="currentColor"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
  <div
    class="flex flex-col items-stretch basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 justify-center px-[16px] h-[var(--c-h)] bg-surface1 border-surface3 border-[1px] relative [border-bottom-left-radius:var(--c-bblr)] [border-bottom-right-radius:var(--c-bbrr)]"
    style="--c-h: 64px; --c-bblr: 16px; --c-bbrr: 16px;"
  >
    <div
      class="[container-name:true] flex items-stretch basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 [container-type:normal] rounded-[12px] [cursor:pointer] bg-transparent flex-row justify-between [transition:transform_80ms_ease-in-out,_opacity_80ms_ease-in-out] active:opacity-[0.75] active:[transform:scale(0.98)] focus-visible:[transform:scaleX(0.98)_scaleY(0.98)] focus-visible:[outline-offset:1px] focus-visible:[outline-style:solid] focus-visible:[outline-width:1px] focus-visible:[outline-color:var(--neutral3)] group"
      data-testid="send-form-select-token"
      role="button"
      tabindex="0"
    >
      <div
        class="flex basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 flex-row items-center gap-[12px]"
      >
        <div
          class="flex basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 flex-row items-center gap-[12px] w-[100%]"
        >
          <div
            class="flex flex-col basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 items-center top-[0px] left-[0px]"
          >
            <div
              class="flex flex-col items-stretch basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 relative"
            >
              <div
                class="flex flex-col basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 items-center justify-center w-[36px] h-[36px] relative [pointer-events:auto]"
                data-testid="token-logo"
              >
                <div
                  class="flex flex-col items-stretch basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 w-[var(--c-w)] h-[var(--c-h)] bg-[color:var(--c-bg)] rounded-[999999px] opacity-[0] absolute top-[var(--c-top)] left-[var(--c-left)] z-[var(--c-z)]"
                  style="--c-w: 96%; --c-h: 96%; --c-bg: #FFFFFF; --c-top: 2%; --c-left: 2%; --c-z: 0;"
                />
                <div
                  data-testid="img-token-image"
                  style="box-sizing: border-box; display: flex; flex-direction: column; flex-shrink: 0; min-width: 0;"
                >
                  <img
                    height="36"
                    src="https://raw.githubusercontent.com/Uniswap/assets/master/blockchains/ethereum/assets/0x6B175474E89094C44Da98b954EedeAC495271d0F/logo.png"
                    style="object-fit: cover; width: 36px; height: 36px; border-radius: 36px; z-index: 1;"
                    width="36"
                  />
                </div>
                <div
                  class="flex flex-col items-stretch basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 absolute right-[var(--c-right)] bottom-[var(--c-bottom)] z-[var(--c-z)]"
                  style="--c-right: -3px; --c-bottom: -2px; --c-z: 10;"
                >
                  <div
                    class="flex flex-col basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 items-center justify-center overflow-hidden z-[var(--c-z)]"
                    data-testid="network-logo-1"
                    style="--c-z: 10; width: 17px; height: 17px; border-radius: 5.1px; border-width: 1.5px;"
                  >
                    <div
                      class="css-view-175oi2r r-flexBasis-1mlwlqe r-overflow-1udh08x r-zIndex-417010"
                      style="object-fit: contain; width: 15px; height: 15px;"
                    >
                      <div
                        class="css-view-175oi2r r-backgroundColor-1niwhzg r-backgroundPosition-vvn4in r-backgroundRepeat-u6sd8q r-bottom-1p0dtai r-height-1pi2tsx r-left-1d2f490 r-position-u8s1d r-right-zchlnj r-top-ipm5af r-width-13qz1uu r-zIndex-1wyyakw r-backgroundSize-4gszlv"
                        style="background-image: url(ethereum-logo.png);"
                      />
                      <img
                        alt=""
                        class="css-accessibilityImage-9pa8cd"
                        draggable="false"
                        src="ethereum-logo.png"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="flex items-stretch basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 flex-row w-[100%]"
          >
            <div
              class="flex flex-col items-stretch basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0"
            >
              <span
                class="[display:inline] box-border m-0 [word-wrap:break-word] whitespace-pre-wrap [font-family:var(--stext-font-book)] text-[16px] [line-height:22px] [font-weight:485] [color:var(--stext-neutral1)]"
              >
                DAI
              </span>
              <div
                class="flex items-stretch basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 flex-row gap-[4px] w-[100%]"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="flex items-stretch basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 flex-row"
      >
        <div
          class="flex flex-col basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 items-center justify-center rounded-[999999px] static [transform:var(--c-tr)] transition-transform duration-150 ease-in-out"
          style="--c-tr: rotate(270deg);"
        >
          <svg
            fill="none"
            stroke-width="8"
            style="color: rgb(155, 155, 155); width: 24px; height: 24px;"
            viewBox="0 0 24 24"
          >
            <path
              clip-rule="evenodd"
              d="M15.7071 5.29289C16.0976 5.68342 16.0976 6.31658 15.7071 6.70711L10.4142 12L15.7071 17.2929C16.0976 17.6834 16.0976 18.3166 15.7071 18.7071C15.3166 19.0976 14.6834 19.0976 14.2929 18.7071L8.2929 12.7071C7.9024 12.3166 7.9024 11.6834 8.2929 11.2929L14.2929 5.29289C14.6834 4.90237 15.3166 4.90237 15.7071 5.29289Z"
              fill="currentColor"
              fill-rule="evenodd"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SendCurrencyInputform > should render placeholder values 1`] = `
<div
  class="flex flex-col items-stretch basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 opacity-[1]"
>
  <div
    class="flex flex-col basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 items-center justify-end bg-surface1 border-surface3 border-[1px] border-b-[0px] relative [border-top-left-radius:var(--c-btlr)] [border-top-right-radius:var(--c-btrr)]"
    style="--c-btlr: 16px; --c-btrr: 16px;"
  >
    <div
      class="flex flex-col basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 items-center w-[100%]"
    >
      <div
        class="[container-name:true] flex flex-col items-stretch basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 [container-type:normal] rounded-[12px] bg-transparent w-[100%] [cursor:text] [transition:transform_80ms_ease-in-out,_opacity_80ms_ease-in-out] active:opacity-[0.75] active:[transform:scale(0.98)] focus-visible:[transform:scaleX(0.98)_scaleY(0.98)] focus-visible:[outline-offset:1px] focus-visible:[outline-style:solid] focus-visible:[outline-width:1px] focus-visible:[outline-color:var(--neutral3)] group"
        role="button"
        tabindex="0"
      >
        <div
          class="flex flex-col items-stretch basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 px-[16px] pt-[16px] w-[100%]"
        >
          <span
            class="[display:inline] box-border m-0 [word-wrap:break-word] whitespace-pre-wrap [font-family:var(--stext-font-book)] text-[16px] [line-height:22px] [font-weight:485] [color:var(--stext-neutral1)]"
          >
            You’re sending
          </span>
        </div>
        <div
          class="flex flex-col basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 items-center px-[16px] pt-[60px] w-[100%]"
        >
          <div
            class="flex items-stretch basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 flex-row w-[max-content] max-w-[100%] relative"
          >
            <div
              class="flex flex-col items-stretch basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0"
            >
              <span
                class="[display:inline] box-border m-0 [word-wrap:break-word] whitespace-pre-wrap [font-family:var(--stext-font-book)] text-[length:var(--c-text)] [font-weight:485] [line-height:var(--c-lh)] [color:var(--stext-neutral3)] text-left [user-select:none]"
                style="--c-text: 70px; --c-lh: 60px; line-height: 84px; font-size: 70px;"
              >
                $
              </span>
            </div>
            <input
              autocomplete="off"
              autocorrect="off"
              data-testid="send-form-amount-input"
              data-uds-placeholder=""
              dir="auto"
              inputmode="decimal"
              maxlength="79"
              placeholder="0"
              spellcheck="false"
              style="box-sizing: border-box; margin: 0px; padding: 0px 0px 0px 0px; border-width: 0px; border-style: solid; appearance: none; resize: none; position: relative; outline-width: 0; flex-grow: 1; flex-shrink: 1; flex-basis: auto; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; text-align: left; background-color: transparent; color: rgb(19, 19, 19); width: 43px; min-width: 0; max-width: calc(100% - 43px); max-height: 84px; font-family: Basel, -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif; font-size: 70px; font-weight: 485; line-height: 84px; outline-style: none; pointer-events: auto; --uds-input-placeholder: rgba(19, 19, 19, 0.63);"
              value=""
              virtualkeyboardpolicy="auto"
            />
            <span
              class="[display:inline] box-border m-0 [word-wrap:break-word] whitespace-pre-wrap [font-family:var(--stext-font-book)] text-[length:var(--c-text)] [font-weight:485] [line-height:var(--c-lh)] [color:var(--stext-neutral1)] text-left absolute right-[0px] bottom-[0px] [pointer-events:none]"
              style="--c-text: 70px; --c-lh: 60px; visibility: hidden; line-height: 84px; font-size: 70px;"
            />
          </div>
        </div>
      </div>
      <div
        class="flex flex-col basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 items-center gap-[16px] px-[16px] pt-[16px] pb-[60px] w-[100%]"
      >
        <div
          class="flex basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 flex-row items-center justify-center gap-[4px] [cursor:pointer] hover:opacity-[var(--ch-opacity)] active:opacity-[var(--ca-opacity)] [text-decoration:none]"
          style="--ch-opacity: 0.8; --ca-opacity: 0.6; transition: 100ms;"
        >
          <span
            class="[display:inline] box-border m-0 [word-wrap:break-word] whitespace-pre-wrap [font-family:var(--stext-font-book)] text-[16px] [line-height:22px] [font-weight:485] [color:var(--stext-neutral2)]"
          >
            0 DAI
          </span>
          <svg
            fill="none"
            stroke-width="8"
            style="width: 16px; height: 16px;"
            viewBox="0 0 24 24"
          >
            <path
              d="M21.7069 7.7071C21.5119 7.9021 21.2559 8.00007 20.9999 8.00007C20.7439 8.00007 20.4879 7.9021 20.2929 7.7071L17.9999 5.41413V17.0001C17.9999 17.5521 17.5529 18.0001 16.9999 18.0001C16.4469 18.0001 15.9999 17.5521 15.9999 17.0001V5.41413L13.7069 7.7071C13.3159 8.0981 12.6839 8.0981 12.2929 7.7071C11.9019 7.3161 11.9019 6.68403 12.2929 6.29304L16.2919 2.29401C16.3849 2.20101 16.4948 2.12797 16.6178 2.07697C16.8618 1.97597 17.138 1.97597 17.382 2.07697C17.505 2.12797 17.6149 2.20101 17.7079 2.29401L21.7069 6.29304C22.0979 6.68403 22.0979 7.3161 21.7069 7.7071ZM10.2929 16.293L7.99992 18.586V7.00007C7.99992 6.44807 7.55292 6.00007 6.99992 6.00007C6.44692 6.00007 5.99992 6.44807 5.99992 7.00007V18.586L3.70695 16.293C3.31595 15.902 2.68388 15.902 2.29288 16.293C1.90188 16.684 1.90188 17.3161 2.29288 17.7071L6.29191 21.7061C6.38491 21.7991 6.49483 21.8722 6.61784 21.9232C6.73984 21.9742 6.86992 22.0001 6.99992 22.0001C7.12992 22.0001 7.25999 21.9732 7.382 21.9232C7.505 21.8722 7.61492 21.7991 7.70792 21.7061L11.7069 17.7071C12.0979 17.3161 12.0979 16.684 11.7069 16.293C11.3159 15.902 10.6839 15.902 10.2929 16.293Z"
              fill="currentColor"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
  <div
    class="flex flex-col items-stretch basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 justify-center px-[16px] h-[var(--c-h)] bg-surface1 border-surface3 border-[1px] relative [border-bottom-left-radius:var(--c-bblr)] [border-bottom-right-radius:var(--c-bbrr)]"
    style="--c-h: 64px; --c-bblr: 16px; --c-bbrr: 16px;"
  >
    <div
      class="[container-name:true] flex items-stretch basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 [container-type:normal] rounded-[12px] [cursor:pointer] bg-transparent flex-row justify-between [transition:transform_80ms_ease-in-out,_opacity_80ms_ease-in-out] active:opacity-[0.75] active:[transform:scale(0.98)] focus-visible:[transform:scaleX(0.98)_scaleY(0.98)] focus-visible:[outline-offset:1px] focus-visible:[outline-style:solid] focus-visible:[outline-width:1px] focus-visible:[outline-color:var(--neutral3)] group"
      data-testid="send-form-select-token"
      role="button"
      tabindex="0"
    >
      <div
        class="flex basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 flex-row items-center gap-[12px]"
      >
        <div
          class="flex basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 flex-row items-center gap-[12px] w-[100%]"
        >
          <div
            class="flex flex-col basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 items-center top-[0px] left-[0px]"
          >
            <div
              class="flex flex-col items-stretch basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 relative"
            >
              <div
                class="flex flex-col basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 items-center justify-center w-[36px] h-[36px] relative [pointer-events:auto]"
                data-testid="token-logo"
              >
                <div
                  class="flex flex-col items-stretch basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 w-[var(--c-w)] h-[var(--c-h)] bg-[color:var(--c-bg)] rounded-[999999px] opacity-[0] absolute top-[var(--c-top)] left-[var(--c-left)] z-[var(--c-z)]"
                  style="--c-w: 96%; --c-h: 96%; --c-bg: #FFFFFF; --c-top: 2%; --c-left: 2%; --c-z: 0;"
                />
                <div
                  data-testid="img-token-image"
                  style="box-sizing: border-box; display: flex; flex-direction: column; flex-shrink: 0; min-width: 0;"
                >
                  <img
                    height="36"
                    src="https://raw.githubusercontent.com/Uniswap/assets/master/blockchains/ethereum/assets/0x6B175474E89094C44Da98b954EedeAC495271d0F/logo.png"
                    style="object-fit: cover; width: 36px; height: 36px; border-radius: 36px; z-index: 1;"
                    width="36"
                  />
                </div>
                <div
                  class="flex flex-col items-stretch basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 absolute right-[var(--c-right)] bottom-[var(--c-bottom)] z-[var(--c-z)]"
                  style="--c-right: -3px; --c-bottom: -2px; --c-z: 10;"
                >
                  <div
                    class="flex flex-col basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 items-center justify-center overflow-hidden z-[var(--c-z)]"
                    data-testid="network-logo-1"
                    style="--c-z: 10; width: 17px; height: 17px; border-radius: 5.1px; border-width: 1.5px;"
                  >
                    <div
                      class="css-view-175oi2r r-flexBasis-1mlwlqe r-overflow-1udh08x r-zIndex-417010"
                      style="object-fit: contain; width: 15px; height: 15px;"
                    >
                      <div
                        class="css-view-175oi2r r-backgroundColor-1niwhzg r-backgroundPosition-vvn4in r-backgroundRepeat-u6sd8q r-bottom-1p0dtai r-height-1pi2tsx r-left-1d2f490 r-position-u8s1d r-right-zchlnj r-top-ipm5af r-width-13qz1uu r-zIndex-1wyyakw r-backgroundSize-4gszlv"
                        style="background-image: url(ethereum-logo.png);"
                      />
                      <img
                        alt=""
                        class="css-accessibilityImage-9pa8cd"
                        draggable="false"
                        src="ethereum-logo.png"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="flex items-stretch basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 flex-row w-[100%]"
          >
            <div
              class="flex flex-col items-stretch basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0"
            >
              <span
                class="[display:inline] box-border m-0 [word-wrap:break-word] whitespace-pre-wrap [font-family:var(--stext-font-book)] text-[16px] [line-height:22px] [font-weight:485] [color:var(--stext-neutral1)]"
              >
                DAI
              </span>
              <div
                class="flex items-stretch basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 flex-row gap-[4px] w-[100%]"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="flex items-stretch basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 flex-row"
      >
        <div
          class="flex flex-col basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 items-center justify-center rounded-[999999px] static [transform:var(--c-tr)] transition-transform duration-150 ease-in-out"
          style="--c-tr: rotate(270deg);"
        >
          <svg
            fill="none"
            stroke-width="8"
            style="color: rgb(155, 155, 155); width: 24px; height: 24px;"
            viewBox="0 0 24 24"
          >
            <path
              clip-rule="evenodd"
              d="M15.7071 5.29289C16.0976 5.68342 16.0976 6.31658 15.7071 6.70711L10.4142 12L15.7071 17.2929C16.0976 17.6834 16.0976 18.3166 15.7071 18.7071C15.3166 19.0976 14.6834 19.0976 14.2929 18.7071L8.2929 12.7071C7.9024 12.3166 7.9024 11.6834 8.2929 11.2929L14.2929 5.29289C14.6834 4.90237 15.3166 4.90237 15.7071 5.29289Z"
              fill="currentColor"
              fill-rule="evenodd"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;
